For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== Unreleased

Enhancements::

* allow page numbering and running content to start after first page of a document without a title page by assigning an integer to the respective start_at theme key (#1644)
* allow theme to configure page numbering to start at cover (#1727)
* allow theme to define the front and back cover images (#1584)
* allow the front and back cover images to be defined using a data URI (#1584)
* allow theme to control margin and content margin of running content per periphery (header or footer) and per side (recto or verso) (#994)
* allow theme to control border style of delimited blocks (example, sidebar, code, admonition, verse, quote) (#1586)
* allow theme to control font color of first line of abstract
* allow theme to control background color and border offset (only for background) for links (#1705)
* don't render index section if index is empty (i.e., there are no index entries)
* stabilize font paths in built-in themes by prefixing paths with GEM_FONTS_DIR (#1568)
* assign page-layout attribute in running content so it can be used select background per layout (#1570)
* reset numbering of footnotes in each chapter; add chapter xreftext to label of footnote reference that refers to previous chapter (#1639)
* add support for assigning the same font file to all font variants (i.e., styles) using the wildcard key (`*`) (#1588)
* allow caption max-width to be set to percentage of content by passing argument to fit-content function (#1494)
* allow theme to control text alignment of caption independent of box alignment (#1493)
* set chapter-numeral attribute in running content on pages in chapter if sectnums attribute is set (#1373)
* set part-numeral attribute in running content on pages in part if partnums attribute is set (#1373)
* add support for normal_italic font style (to reset font style to normal, then apply italic) (#1603)